# ChangeLog for dev-ruby/rubycas-client
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*rubycas-client-2.3.1 (23 Oct 2011)

  23 Oct 2011; Hans de Graaff <graaff@gentoo.org> +rubycas-client-2.3.1.ebuild,
  +metadata.xml:
  Initial import. New dependency for Tracks.
