@@ -1,14 +1,12 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST rubycas-client-2.3.1.gem 47104 RMD160 90f5e3cfe18296b6f98ef2a18546b60f2c66ae88 SHA1 a20edfafd291829c1e4258e7fc0f77dc71d06689 SHA256 f3849be48e219faf1bfcf4542f5c5b4493dc780f2f2ac1603005657e4380bf3e
-EBUILD rubycas-client-2.3.1.ebuild 825 RMD160 90f027ebca0cb2ebe4dd1b19a3cd06bbb7abf372 SHA1 7e4e4a43deac4b11322edb37335a4dd5e347f988 SHA256 f349a3f3317421eecf51420da4e74455cb660e19d51cd50a809b60c9ceb24b7c
-MISC ChangeLog 304 RMD160 4793faef53cfabd32a2d79a228e54155caf38c77 SHA1 8a67a8b2ba6a7a2cbf0856d9e019c462522a89b2 SHA256 5c32f3ffd0465894d6625e959d389528e3d3c0826d939ad92521bff310ec5cbb
-MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
+DIST rubycas-client-2.3.1.gem 47104 SHA256 f3849be48e219faf1bfcf4542f5c5b4493dc780f2f2ac1603005657e4380bf3e SHA512 aecc600fbb976ab85296adc7de9aef4f8c3b87d9e08884a9499ecdd4845fe5e3ba089acbff5e744a7a16b4803a1c1a5bd20721670937655032646a0702c5ce12 WHIRLPOOL 3c6416d7d0d5e110eaa80566db119d5e0813f97cce11394d8603f0a192d7d6bf36d04b157c56b5b03f0d099c34690f7a73464a6a35a1f87637507bc5b3258041
+DIST rubycas-client-2.3.9.gem 53760 SHA256 8ed1e3f583c20c05c7dfb8f3e6e831b08b5c1b5b3843f5b1aa08cc7717c8f971 SHA512 c91351c93abab20d879adc9bc56f85bd5029a456fec56b8c98974d3cda1520fbe89fb1444f779c76b76c41a1acb9d3a29985783dff97e1d707490d9b2bd42684 WHIRLPOOL 13f70f02e51d82586f38d7416011e4c62ddac41c7070475574545382a4c97abf9a2ec99fc31cdc7f203a3890720acb6021007a2ce93bfc32f05ec773da7f1fd6
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk6kBboACgkQiIP6VqMIqNc58QD8CDM0wofoUqImBpbuXGu7I7K5
-4ayWTlVnjfSgcLih1NoA/i/Bi1axgCMTkpjdG8PhJzwcvuHZ//408WCnashsCdY4
-=UT1M
+iF4EAREIAAYFAlBuo5YACgkQiIP6VqMIqNdR+gD9Hf4XKbKdiH60Rb8IbSHvZWCw
++JuSUhTFBE3i7WcBn+AA+wca+T3sgH9PMzysdxnKhaaGa8P2nKawJm5eBne6aO3K
+=2r7J
 -----END PGP SIGNATURE-----
