@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/rubycas-client
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*rubycas-client-2.3.9 (05 Oct 2012)
+
+  05 Oct 2012; Hans de Graaff <graaff@gentoo.org> +rubycas-client-2.3.9.ebuild:
+  Version bump.
 
 *rubycas-client-2.3.1 (23 Oct 2011)
 
